# cxx_lectures

./: CMakeLists.txt  README.md
code_examples/: CMakeLists.txt
code_examples/src/: task1.cc  task2.cc  task3.cc  task4.cc  task5.cc
decorators/: CMakeLists.txt
decorators/src/: decorators.h  device.h  main.cc
exceptions/: CMakeLists.txt
exceptions/src/: custom exceptions copy  error codes  exceptions with codes  main.cc  math_vector.cc  math_vector.h  normal exceptions  vectors.cc
game/: CMakeLists.txt
game/src/: game.cc  game.h  game_constants.h  main.cc  units.cc  units.h  visualizer.h
move_semantics/: CMakeLists.txt
move_semantics/src/: main.cc  move_constructors
policy_design/: CMakeLists.txt  selection_function
policy_design/src/: policy_main.cc  policy_table.h  polymorphic_main.cc  polymorphic_table.h  strategy_main.cc  stratrgy_table.h
template_pattern/: CMakeLists.txt
template_pattern/src/: crtp_units.h  main.cc  nvi_main.cc  nvi_units.cc  nvi_units.h  units.cc  units.h
tests/: CMakeLists.txt  math_vector.cc  math_vector.h  math_vector_test.cpp
